Testing out EVI  commit - cloned parts of Hume's API packages to customize the react / voice embed library.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "hume": "^0.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.242",
